--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark">
-         <a class="navbar-brand mx-auto" href="index.html">
+         <a class="navbar-brand mx-auto" href="index">
          <img src="img/logo-black.png" height="22" alt="Logo">
          </a>
          <div id="toggler" class="wrapper custom-toggler navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
@@ -44,10 +44,10 @@
          </div>
          <div id="toggle-nav" class="navbar-collapse collapse">
             <ul class="navbar-nav">
-               <li class="nav-item"> <a class="nav-link" href="about.html">About</a></li>
-               <li class="nav-item"> <a class="nav-link" href="works.html">Works</a></li>
-               <li class="nav-item"> <a class="nav-link" href="blog.html">Blog</a></li>
-               <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a></li>
+               <li class="nav-item"> <a class="nav-link" href="about">About</a></li>
+               <li class="nav-item"> <a class="nav-link" href="works">Works</a></li>
+               <li class="nav-item"> <a class="nav-link" href="blog">Blog</a></li>
+               <li class="nav-item"> <a class="nav-link" href="contact">Contact</a></li>
             </ul>
             <div id="social">
                <br>
