--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark">
-         <a class="navbar-brand mx-auto" href="index">
+         <a class="navbar-brand mx-auto" href="https://akshitanchan.com">
          <img src="img/logo-black.png" height="22" alt="Logo">
          </a>
          <div id="toggler" class="wrapper custom-toggler navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
