List with <ul> tag and other Justifications

--- a/about.html
+++ b/about.html
@@ -72,7 +72,8 @@
                   <div class="row justify-content-center">
                      <div class="col-9">
                         <div class="row">
-                           <div>
+                           <div style="text-align:justify;">
+                              <style>ul {margin-left:30px;}</style>
                               <h2>About Me</h2>
                                  <p>My background in administration, research and design augments to my mindful, competitive and detail-oriented approach towards problems.</p>
                                  <p>My hunger for knowledge and determination to turn information into action has contributed to my most recent success at the highly revered international Locate Victims Beirut Initiative where I had to efficiently develop online presence, improve team productivity by implementing strategic project management methods and maintain a strong media presence.</p>
@@ -83,16 +84,34 @@
                               <h2>My Work Experience</h2>
                                  <h4>Content Designer and Web Developer @ Humans of Safe Places</h4>
                                     <p>Aug 2020 - Present</p>
-                                    <p>- Designing the content (suited for Social Media platforms) and maintaining unique aesthetic appeal to increase user engagement.<br>- Initializing and managing company domain email access and providing unlimited video-conferencing access for internal and public events.<br>- Designing the HOSP website on the Wix Editor platform while utilizing its extensive built-in features and adding HTML for greater functionality.</p>
+                                    <ul>
+                                       <li>Designing the content (suited for Social Media platforms) and maintaining unique aesthetic appeal to increase user engagement.</li>
+                                       <li>Initializing and managing company domain email access and providing unlimited video-conferencing access for internal and public events.</li>
+                                       <li>Designing the HOSP website on the Wix Editor platform while utilizing its extensive built-in features and adding HTML for greater functionality.</li>
+                                    </ul>
                                  <h4>Director of Outreach and Web Development @ Locate Victims Beirut</h4>
                                     <p>Aug 2020 - Present</p>
-                                    <p- Founding Member in the Core Team of Locate Victims Beirut, an emergency response platform designed to locate and aid individuals affected by the 2020 Beirut blasts.<br>- Designed the Website using the integrated Builder and added several important features (using HTML, CSS and JS).<br>- Helping in transitory phase from locating victims to shedding light on and assisting vulnerable groups affected by the ongoing crisis in Lebanon.<br>- Contacting international News Organizations; Within weeks, LVB was featured on a BBC podcast and article, Al Maktoumi Initiatives, Business Insider, The National, Al Arabiya, SBS News, The Washington Post, Middle East Eye, Cosmopolitan and several others.</p>
+                                    <ul>
+                                       <li>Founding Member in the Core Team of Locate Victims Beirut, an emergency response platform designed to locate and aid individuals affected by the 2020 Beirut blasts.</li>
+                                       <li>Designed the Website using the integrated Builder and added several important features (using HTML, CSS and JS).</li>
+                                       <li>Helping in transitory phase from locating victims to shedding light on and assisting vulnerable groups affected by the ongoing crisis in Lebanon.</li>
+                                       <li>Contacting international News Organizations; Within weeks, LVB was featured on a BBC podcast and article, Al Maktoumi Initiatives, Business Insider, The National, Al Arabiya, SBS News, The Washington Post, Middle East Eye, Cosmopolitan and several others.</li>
+                                    </ul>
                                  <h4>Senior Web Designer @ LiveMUN</h4>
                                     <p>Jun 2020 - Sep 2020</p>
-                                    <p>- Redesigning the LiveMUN Website using HTML5, CSS3, JavaScript and PHP, MySQL to develop a responsive WordPress Website.<br>- Working on WordPress development and integration of necessary WordPress plugins, while setting up optimization, configuration and caching.<br>- Graphic designing of elements of the Model UN Conference events.</p>
+                                    <ul>
+                                       <li>Redesigning the LiveMUN Website using HTML5, CSS3, JavaScript and PHP, MySQL to develop a responsive WordPress Website.</li>
+                                       <li>Working on WordPress development and integration of necessary WordPress plugins, while setting up optimization, configuration and caching.</li>
+                                       <li>Graphic designing of elements of the Model UN Conference events.</li>
+                                    </ul>
                                  <h4>Founder and President @ Legatus Model UN</h4>
                                     <p>March 2020 - July 2020</p>
-                                    <p>- Founder of Legatus MUN which has provided renowned Model UN simulations for free and received 1000s of registrations internationally.<br>- Working with appointed department heads to delegate responsibilities and ensure that all aspects of the agency are running efficiently.<br>- Approving sponsorship and mutual agreements with relevant organizations and companies to boost overall attendance.<br>- Overseeing the conduction of market research to determine the demands and requests of the key demographic and act on them accordingly (in terms of delegate/participant demands).</p>
+                                    <ul>
+                                       <li>Founder of Legatus MUN which has provided renowned Model UN simulations for free and received 1000s of registrations internationally.</li>
+                                       <li>Working with appointed department heads to delegate responsibilities and ensure that all aspects of the agency are running efficiently.</li>
+                                       <li>Approving sponsorship and mutual agreements with relevant organizations and companies to boost overall attendance.</li>
+                                       <li>Overseeing the conduction of market research to determine the demands and requests of the key demographic and act on them accordingly (in terms of delegate/participant demands).</li>
+                                    </ul>
                               <h2>My Volunteer Experience</h2>
                                  <h4>Campus Ambassador @ Hamari Pahchan NGO</h4>
                                     <p>Aug 2020 (1 month)</p>
