--- a/blog-single.html
+++ b/blog-single.html
@@ -4,8 +4,8 @@
       <!-- Meta -->
       <title>Akshit Anchan | Blog</title>
       <meta charset="UTF-8">
-      <meta name="description" content="Akshit's Blog comprises of a wide variety of topics mostly concerning web-development and IT-support for beginners, personal branding, effective management skills, research tips and more!">
-      <meta name="keywords" content="akshit anchan, akshit dubai, akshit">
+      <meta name="description" content="">
+      <meta name="keywords" content="">
       <meta name="author" content="Akshit Anchan">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Styles -->
