--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,9 @@
             <div class="col-md-10 offset-md-1">
                <div class="row">
                   <div class="col-md-6 col-sm-12">
-                     <p>Get in touch with me if you work for a not-for-profit agency or would just like to use my services as a freelancer. I'm extremely comfortable with managing web and mail hosting, developing and designing HTML, CSS and Javascript-based websites, and would love to solve any other IT and web-oriented queries. I am always up for a challenge and would love to connect with you.</p>
-                     <p>If you want to reach me via email, just send one to <b><a href="mailto:hello@akshitanchan.com">hello@akshitanchan.com.</a></b></p>
+                     <p style="text-align:justify;">Do get in touch with me if you represent a non-profit organization or even if you've got a project that you think I would be suited to. I'm extremely comfortable with managing web and mail hosting, developing and designing HTML, CSS and Javascript-based websites and my graphic design skills are quite decent too.
+                     <p style="text-align:justify;">I would love to address any doubts or queries you may have (regarding anything at all). I'm always up for a challenge and would love to connect with you!</p>
+                     <p style="text-align:justify;">If you want to reach me via email, just get in touch via <b><a href="mailto:hello@akshitanchan.com">hello@akshitanchan.com</a></b>.</p>
                   </div>
                   <div class="col-md-5 offset-md-1 col-sm-12"><p>You can also check out my<br><b>
                      <a href="https://www.instagram.com/AkshitAnchan/" alt="Instagram">Instagram</a>&nbsp;&nbsp;
@@ -86,7 +87,6 @@
       </div>
       <!-- End Contact -->
       <!-- Javascript -->
-      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
       <script src="vendor/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
       <script src="vendor/wow/wow.js"></script>
