--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="row justify-content-center">
                      <div class="col-9">
                         <div class="row">
-                           <div class="">
+                           <div style="text-align:justify;">
                               <p>Hey! I'm Akshit Anchan, a senior-year high school student in Dubai, UAE. Over the course of the last two years I have gained a substantial amount of experience in Management, Outreach and Web Development. I have a demonstrated history of working in the non-profit organization management industry. I'm skilled in Web and Graphic Design, Analytics and SEO, IT Fundamentals, Digital Content Management, Public Relations, and Research.</p>
                               <p>I have developed and designed multiple websites, most of whom are made for non-profit, event-based and even commercial organizations including Locate Victims Beirut, Legatus MUN and Humans of Safe Places. When I'm not working on another website or pulling all-nighters on an assignment, you'd probably find me binging TV Shows, listening to anything remotely Soft Pop, or even attempting TikTok dances.</p>
                               <p>As is evident by my experiences, I am fascinated by several disciplines. I also love contributing in social and civic organizations. I'm currently pursuing my High School Diploma focused in Computer Sciences, Physics, Chemistry, and Mathematics from The Indian High School, Dubai, while working part-time as the Head of Outreach and Web Development at the internationally renowned Locate Victims Beirut Initiative.</p>
