--- a/works.html
+++ b/works.html
@@ -78,31 +78,31 @@
       <div class="container">
          <div class="row">
             <div class="col-xl-5 col-md-7 offset-md-3 col-sm-12 pt-5">
-               <a href="https://akshitanchan.com/" target="_blank"><img class="img-fluid web" src="img/websites/personal.png" border="1" alt="Personal Portfolio Website"></a>
+               <a href="https://akshitanchan.com/" target="_blank"><img class="img-fluid web" src="img/websites/personal.jpg" border="1" alt="Personal Portfolio Website"></a>
                <p>Developed by me, for me :)</p>
             </div>
          </div>
          <div class="row">
             <div class="col-xl-5 col-md-7 offset-md-1 col-sm-12 pt-5">
-               <a href="https://www.humansofsafeplaces.org/" target="_blank"><img class="img-fluid web" src="img/websites/humansofsafeplaces.png" border="1" alt="Humans of Safe Places Website"></a>
+               <a href="https://www.humansofsafeplaces.org/" target="_blank"><img class="img-fluid web" src="img/websites/humansofsafeplaces.jpg" border="1" alt="Humans of Safe Places Website"></a>
                <p>Designed by me, for <b><a href="https://www.humansofsafeplaces.org/" target="_blank">Humans of Safe Places</a></b></p>
             </div>
          </div>
          <div class="row">
             <div class="col-xl-5 col-md-7 offset-md-5 col-sm-12 pt-5">
-               <a href="https://locatevictimsbeirut.com/" target="_blank"><img class="img-fluid web" src="img/websites/locatevictimsbeirut.png" border="1" alt="Locate Victims Beirut Website"></a>
+               <a href="https://locatevictimsbeirut.com/" target="_blank"><img class="img-fluid web" src="img/websites/locatevictimsbeirut.jpg" border="1" alt="Locate Victims Beirut Website"></a>
                <p>Designed by me, for <b><a href="https://locatevictimsbeirut.com/" target="_blank">Locate Victims Beirut</a></b></p>
             </div>
          </div>
          <div class="row">
             <div class="col-xl-5 col-md-7 offset-md-4 col-sm-12 pt-5">
-               <a href="https://livemun.com/" target="_blank"><img class="img-fluid web" src="img/websites/livemun.png" border="1" alt="LiveMUN Website"></a>
+               <a href="https://livemun.com/" target="_blank"><img class="img-fluid web" src="img/websites/livemun.jpg" border="1" alt="LiveMUN Website"></a>
                <p>Developed and optimised by me, for <b><a href="https://livemun.com/" target="_blank">LiveMUN</a></b></p>
             </div>
          </div>
          <div class="row">
             <div class="col-xl-5 col-md-7 col-sm-12 pt-5">
-               <a href="https://www.legatusmun.com/home" target="_blank"><img class="img-fluid web" src="img/websites/legatusmun.png" border="1" alt="Legatus MUN Website"></a>
+               <a href="https://www.legatusmun.com/home" target="_blank"><img class="img-fluid web" src="img/websites/legatusmun.jpg" border="1" alt="Legatus MUN Website"></a>
                <p>Developed by me, for <b><a href="https://www.legatusmun.com/home" target="_blank">Legatus Model UN</a></b></p>
             </div>
          </div>
