--- a/blog-single.html
+++ b/blog-single.html
@@ -32,6 +32,14 @@
       <meta name="msapplication-TileColor" content="#ffffff">
       <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
       <meta name="theme-color" content="#ffffff">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178736462-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-178736462-1');
+      </script>
    </head>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark">
