--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       </script>
    </head>
    <body>
+      <div id="loader"></div>
+      <script>
+         var preloader = document.getElementById('loader');
+         function preLoaderHandler(){preloader.style.display = 'none';}
+      </script>
       <nav class="navbar navbar-expand-lg navbar-dark">
          <a class="navbar-brand mx-auto" href="https://akshitanchan.com">
          <img src="img/logo-black.png" height="22" alt="Logo">
