--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
       </script>
    </head>
    <body>
-      <div id="loader"></div>
-      <script>
-         var preloader = document.getElementById('loader');
-         function preLoaderHandler(){preloader.style.display = 'none';}
-      </script>
+      <div class="spinner-wrapper">
+         <div class="spinner"></div>
+      </div>         
       <nav class="navbar navbar-expand-lg navbar-dark">
          <a class="navbar-brand mx-auto" href="https://akshitanchan.com">
          <img src="img/logo-black.png" height="22" alt="Logo">
@@ -100,6 +98,17 @@
          </div>
       </div>
       <!-- Javascript -->
+      <script>
+         $(document).ready(function() {
+         //Preloader
+         preloaderFadeOutTime = 500;
+         function hidePreloader() {
+         var preloader = $('.spinner-wrapper');
+         preloader.fadeOut(preloaderFadeOutTime);
+         }
+         hidePreloader();
+         });
+      </script>         
       <script src="vendor/jquery.min.js"></script>
       <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
       <script src="vendor/wow/wow.js"></script>
