--- a/works.html
+++ b/works.html
@@ -41,6 +41,9 @@
       </script>
    </head>
    <body>
+      <div class="spinner-wrapper">
+         <div class="spinner"></div>
+      </div>
       <nav class="navbar navbar-expand-lg navbar-dark">
          <a class="navbar-brand mx-auto" href="https://akshitanchan.com">
          <img src="img/logo-black.png" height="22" alt="Logo">
@@ -124,6 +127,17 @@
       <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
       <script src="vendor/wow/wow.js"></script>
       <script src="js/script.js"></script>
+      <script>
+         $(document).ready(function() {
+         //Preloader
+         preloaderFadeOutTime = 500;
+         function hidePreloader() {
+         var preloader = $('.spinner-wrapper');
+         preloader.fadeOut(preloaderFadeOutTime);
+         }
+         hidePreloader();
+         });
+      </script>
       <script>
          new WOW().init();
       </script>
