--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul class="navbar-nav">
                <li class="nav-item"> <a class="nav-link" href="about">About</a></li>
                <li class="nav-item"> <a class="nav-link" href="works">Works</a></li>
-               <li class="nav-item"> <a class="nav-link" href="blog">Blog</a></li>
+               <li class="nav-item"> <a class="nav-link" href="https://akshitanchan.com/blog/">Blog</a></li>
                <li class="nav-item"> <a class="nav-link" href="contact">Contact</a></li>
             </ul>
             <div id="social">
