--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
       <link href="vendor/animate/animate.css" rel="stylesheet" type="text/css"/>
       <link href="css/style.css" rel="stylesheet" type="text/css"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
